heap, fastpow, bitmask, two sum

--- a/Факты.md
+++ b/Факты.md
@@ -5,3 +5,7 @@ must contain more than one item
 
 Нечётное количество множетелей имеют идеальные квадраты
 
+Оптимальный способ разложить n на комбинацию целых чисел для получения максимального произведения - это использовать как можно больше числа 3 с возможным добавлением 2 или 4, но никогда не больше 4, потому что разбиение 5 на 2 + 3 приводит к более высокий результат, так как 2 * 3 = 6 > 5.
+
+При динамическом программировании, можно добавлять дополнительные границы в массивы, чтобы избежать лишних проверок и index out of range
+
