sorting, gcd, lcm

--- a/Факты.md
+++ b/Факты.md
@@ -9,3 +9,4 @@ must contain more than one item
 
 При динамическом программировании, можно добавлять дополнительные границы в массивы, чтобы избежать лишних проверок и index out of range
 
+Чтобы понять, есть ли решение ax+by=c, при заданных a,b,c, нужно найти НОД a и b и если c % НОД(a,b) == 0, то есть хотя бы одно решение, иначе нет
